# CruiserAssistant

./: CMakeLists.txt  README.md  main.cpp
src/Assistant/: Assistant.cpp  Assistant.h
src/Speech/: SpeechRecognition.cpp  SpeechRecognition.h
src/Time/: TimeUtils.cpp  TimeUtils.h
